Some color and spacing fixes, plus footer position

--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 body {
   margin: auto;
   font-family: "Open Sans", sans-serif;
-  background-color: #23242c;
+  background-color: #434553;
   text-align: center;  
-  color: #737b81
+  color: #c5c5d0;
 }
 
 a {
   text-decoration: none;
-  color: #737b81
+  color: #c5c5d0;
 }
 
 a:hover {
@@ -16,27 +16,30 @@ a:hover {
 }
 
 .name {
-  padding: 50px;
+  padding: 4rem;
   font-family: "Open Sans Light";
-  font-size: 5em;
+  font-size: 5rem;
 }
 
 .info {
-  padding: 20px;
-  font-size: 1.4em;
+  padding: 3rem;
+  font-size: 1.4rem;
     
 }
 
 .spacer {
-  padding-top: 10px;
+  padding-top: .4rem;
   margin: auto;
   width: 90%;
-  max-width: 50em;
-  background-color: #737b81;
-  border-radius: 5px;
+  max-width: 50rem;
+  background-color: #c5c5d0;
+  border-radius: .2rem;
 }
 
 .footer {
-  padding: 20px;
-  font-size: .75rem;
+  margin: 5px;
+  position: absolute;
+  right:0px;
+  bottom: 0px;
+  font-size: .8rem;
 }
